versioned_docs/version-23.1/reference/rpk/rpk-redpanda/rpk-redpanda-check.mdx
---
title: rpk redpanda check
---

<head>
  <meta name="title" content="rpk redpanda check | Redpanda Docs" />
  <meta name="description" content="rpk redpanda check" />
  <link rel="canonical" href="https://docs.redpanda.com/docs/reference/rpk/rpk-redpanda/rpk-redpanda-check/" />
</head>

Check if system meets redpanda requirements.

### Usage

```
rpk redpanda check [flags]
```

### Flags

<table>
  <tbody>
    <tr>
      <td>
        <strong> Value</strong>
      </td>
      <td>
        <strong> Type</strong>
      </td>
      <td>
        <strong> Description</strong>
      </td>
    </tr>
    <tr>
      <td>--config</td>
      <td>string</td>
      <td>
        Redpanda config file, if not set the file will be searched for in the
        default locations.
      </td>
    </tr>
    <tr>
      <td>-h, --help</td>
      <td>-</td>
      <td> Help for check.</td>
    </tr>
    <tr>
      <td>--timeout</td>
      <td>duration</td>
      <td>
        The maximum amount of time to wait for the checks and tune processes to
        complete. The value passed is a sequence of decimal numbers, each with
        optional fraction and a unit suffix, such as <code>300ms</code>,{" "}
        <code>1.5s</code> or <code>2h45m</code>. Valid time units are{" "}
        <code>ns</code>, <code>us</code> (or <code>µs</code>), <code>ms</code>,{" "}
        <code>s</code>, <code>m</code>, <code>h</code> (default 2s).
      </td>
    </tr>
    <tr>
      <td>-v, --verbose</td>
      <td>-</td>
      <td>
        Enable verbose logging (default <code>false</code>).
      </td>
    </tr>
  </tbody>
</table>
